# shortener_project

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  shortener.postman_collection.json
shortener/: admin.py  filters.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
shortener/migrations/: 0001_initial.py
shortener/templates/shortener/: index.html  my_links.html
shortener_project/: asgi.py  settings.py  urls.py  wsgi.py
